kubernetes/raspberry/storage/kopia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
  namespace: storage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Storage
    gethomepage.dev/name: Kopia
    gethomepage.dev/icon: kopia.png
    gethomepage.dev/description: Backup repository
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "kopia.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: derived-p8e1dqian4
          port: 80
